--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Validate HTML
         run: |
           sudo apt-get update
@@ -26,6 +27,7 @@ jobs:
         uses: lycheeverse/lychee-action@v2
         with:
           args: --verbose .
+
   security:
     runs-on: ubuntu-latest
     needs: test
@@ -36,6 +38,7 @@ jobs:
         with:
           path: .
           base: main
+
   static-analysis:
     runs-on: ubuntu-latest
     needs: security
@@ -52,10 +55,16 @@ jobs:
           jshint **/*.js || true
   deploy:
     runs-on: ubuntu-latest
+    # needs: build-and-deploy
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
-      - uses: actions/checkout@v4
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .
+        id: deployment
+        uses: actions/deploy-pages@v4
