--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,16 +55,16 @@ jobs:
           jshint **/*.js || true
   deploy:
     runs-on: ubuntu-latest
-    # needs: build-and-deploy
+    needs: static-analysis
     permissions:
       pages: write
       id-token: write
-
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
